--- a/src/app/core/layouts/components/header-auth/header-auth.component.html
+++ b/src/app/core/layouts/components/header-auth/header-auth.component.html
@@ -1,1 +1,7 @@
-p header-auth
+<nav class="nav">
+  <img
+    class="nav__logo"
+    src="../../../../../assets/images/Logos MDP-Gris.png"
+    alt="Logo de Mensajeros de la Paz"
+  />
+</nav>
