Feat: Maqueta login
login con usuario, contraseña, recordar contraseña y recuperacion de contraseña

--- a/src/app/core/layouts/components/header-auth/header-auth.component.html
+++ b/src/app/core/layouts/components/header-auth/header-auth.component.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <img
     class="nav__logo"
-    src="../../../../../assets/images/Logos MDP-Gris.png"
+    src="../../../../../assets/images/logo-MDP.svg"
     alt="Logo de Mensajeros de la Paz"
   />
 </nav>
