--- a/src/app/core/layouts/components/header-auth/header-auth.component.scss
+++ b/src/app/core/layouts/components/header-auth/header-auth.component.scss
@@ -1,8 +1,11 @@
 // @import 'styles/variables.scss';
 .nav {
   width: 100%;
-  height: 11em;
+
+  display: flex;
+  justify-content: center;
   .nav__logo {
-    height: 100%;
+    height: 8em;
+    margin: 3.12em 0;
   }
 }
