--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,22 @@
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Futura Md BT", Roboto, "Helvetica Neue", sans-serif !important;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Futura Md BT", Roboto, "Helvetica Neue", sans-serif !important;
+}
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
