--- a/src/app/modules/auth/containers/login/login.component.html
+++ b/src/app/modules/auth/containers/login/login.component.html
@@ -1,21 +1,19 @@
 <app-auth-layout>
   <section class="login">
-    <div class="login-form">
-      <h1>Iniciar Sesión</h1>
-      <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Usuario</mat-label>
-        <input matInput />
-      </mat-form-field>
-      <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Contraseña</mat-label>
-        <input matInput type="password" />
-      </mat-form-field>
-      <mat-checkbox class="recordar-usuario-contrasena" color="primary">
+    <form action="" class="login__form">
+      <h1 class="login__h1">Iniciar Sesión</h1>
+      <label class="login__label" for="user">Usuario</label>
+      <input class="login__input" type="text" id="user" />
+      <label class="login__label" for="password">Contraseña</label>
+      <input class="login__input" type="password" id="password" />
+      <mat-checkbox class="login__recordar-usuario" color="primary">
         Recordar usuario y contraseña</mat-checkbox
       >
-      <a href="" class="recuperar-contrasena">Recuperar usuario y contraseña</a>
-      <button mat-raised-button class="btn-ingresar">Ingresar</button>
+      <a href="" class="login__recuperar-contrasena"
+        >Recuperar usuario y contraseña</a
+      >
+      <button mat-raised-button class="login__btn-ingresar">Ingresar</button>
       <!-- <a [routerLink]="['/auth/register']">Ir a registro</a> -->
-    </div>
+    </form>
   </section>
 </app-auth-layout>
