--- a/src/app/modules/auth/containers/login/login.component.scss
+++ b/src/app/modules/auth/containers/login/login.component.scss
@@ -1,32 +1,64 @@
 // @import 'styles/variables.scss';
 .login {
   width: 100%;
-  height: calc(100vh - 14.457em);
+  min-height: calc(100vh - 229px - 54px);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.login-form {
+.login__h1 {
+  font-size: 36px;
+  line-height: 43px;
+  margin-bottom: 40px;
+}
+.login__form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.form-field {
-  width: 18.12em;
+.login__label {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  align-self: flex-start;
 }
-.recordar-usuario-contrasena {
-  margin-top: 1.95em;
+.login__input {
+  width: 290px;
+  height: 60px;
+  font-weight: 400;
+  font-size: 20px;
+  background: #d9d9d9;
+  border-radius: 60px;
+  border: none;
+  padding: 0 30px;
+  margin: 30px 0 15px 0;
 }
-.recuperar-contrasena {
+
+.login__recordar-usuario {
+  margin-top: 35px;
+  align-self: flex-start;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+}
+.login__recuperar-contrasena {
   margin-top: 1.2em;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.494118);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
 }
-.btn-ingresar {
+.login__btn-ingresar {
+  width: 145px;
+  height: 60px;
   background: #19618b;
   border-radius: 60px;
   color: #d9d9d9;
   align-self: flex-end;
   margin: 2.187em 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
 }
