Style: Cambia el tamaño del logo
Se ajusta el tamaño del logo para ser igual al del diseño en figma

--- a/src/app/core/layouts/components/header-auth/header-auth.component.scss
+++ b/src/app/core/layouts/components/header-auth/header-auth.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   .nav__logo {
-    height: 8em;
-    margin: 3.12em 0;
+    height: 8.437rem;
+    margin: 2.93rem 0;
   }
 }
