--- a/src/app/modules/auth/containers/login/login.component.scss
+++ b/src/app/modules/auth/containers/login/login.component.scss
@@ -57,7 +57,7 @@
   border-radius: 60px;
   color: #d9d9d9;
   align-self: flex-end;
-  margin: 2.187em 0;
+  margin: 2.687rem 0 1.437rem;
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
