--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,19 +4,10 @@ body {
 }
 body {
   margin: 0;
-  font-family: "Futura Md BT", Roboto, "Helvetica Neue", sans-serif !important;
-}
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: "Futura Md BT", Roboto, "Helvetica Neue", sans-serif !important;
 }
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: "Futura Md BT", Roboto, "Helvetica Neue", sans-serif;
 }
