--- a/src/app/modules/auth/containers/login/login.component.html
+++ b/src/app/modules/auth/containers/login/login.component.html
@@ -1,21 +1,28 @@
 <app-auth-layout>
-  <section class="login">
-    <form action="" class="login__form">
-      <h2 class="login__h1">Iniciar Sesión</h2>
-      <label class="login__label" for="user">Usuario</label>
-      <input class="login__input" type="text" id="user" />
-      <label class="login__label" for="password">Contraseña</label>
-      <input class="login__input" type="password" id="password" />
-      <mat-checkbox class="login__recordar-usuario" color="primary">
-        Recordar usuario y contraseña</mat-checkbox
-      >
-      <a href="" class="login__recuperar-contrasena"
-        >Recuperar usuario y contraseña</a
-      >
-      <button mat-raised-button class="login__btn-ingresar" color="primary">
-        Ingresar
-      </button>
-      <!-- <a [routerLink]="['/auth/register']">Ir a registro</a> -->
-    </form>
-  </section>
+  <div class="conteiner-login">
+    <img
+      class="conteiner-login__logo"
+      src="../../../../../assets/images/logo-MDP.svg"
+      alt="Logo Mensajeros de la Paz"
+    />
+    <section class="login">
+      <form action="" class="login__form">
+        <h2 class="login__h1">INICIAR SESIÓN</h2>
+        <label class="login__label" for="user">USUARIO</label>
+        <input class="login__input" type="text" id="user" />
+        <label class="login__label" for="password">CONTRASEÑA</label>
+        <input class="login__input" type="password" id="password" />
+        <mat-checkbox class="login__recordar-usuario" color="primary">
+          Recordar usuario y contraseña</mat-checkbox
+        >
+        <a href="" class="login__recuperar-contrasena"
+          >Recuperar usuario y contraseña</a
+        >
+        <button mat-raised-button class="login__btn-ingresar" color="primary">
+          Ingresar
+        </button>
+        <!-- <a [routerLink]="['/auth/register']">Ir a registro</a> -->
+      </form>
+    </section>
+  </div>
 </app-auth-layout>
