--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,5 +9,5 @@ body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Futura Md BT", Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 }
