--- a/src/app/modules/auth/containers/login/login.component.scss
+++ b/src/app/modules/auth/containers/login/login.component.scss
@@ -2,22 +2,23 @@
 .conteiner-login {
   display: flex;
   justify-content: space-evenly;
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - 3.75rem);
 }
 .conteiner-login__logo {
-  width: 756px;
+  width: 42rem;
 }
 .login {
+  width: 42rem;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 2em;
 }
 .login__h1 {
-  font-size: 36px;
-  line-height: 43px;
-  margin-bottom: 54px;
-  margin-top: 20px;
+  font-size: 2.25rem;
+  line-height: 2.6875rem;
+  margin-bottom: 3.375rem;
+  margin-top: 1.25rem;
 }
 .login__form {
   display: flex;
@@ -27,42 +28,54 @@
 }
 .login__label {
   font-weight: 400;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 1.5rem;
+  line-height: 1.8125rem;
 }
 .login__input {
-  width: 290px;
-  height: 60px;
+  width: 18.125rem;
+  height: 3.75rem;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 1.25rem;
   background: #d9d9d9;
-  border-radius: 60px;
+  border-radius: 3.75rem;
   border: none;
-  padding: 0 30px;
-  margin: 25px 0 48px 0;
+  padding: 0 1.875rem;
+  margin: 1.5625rem 0 3rem 0;
 }
 
 .login__recordar-usuario {
-  margin-top: 6px;
+  margin-top: 0.375rem;
   font-weight: 400;
-  font-size: 22px;
-  line-height: 26px;
+  font-size: 1.375rem;
+  line-height: 1.625rem;
 }
 .login__recuperar-contrasena {
-  margin-top: 18px;
+  margin-top: 1.125rem;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.494118);
   font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
 }
 .login__btn-ingresar {
-  width: 145px;
-  height: 60px;
-  border-radius: 60px;
+  width: 9.0625rem;
+  height: 3.75rem;
+  border-radius: 3.75rem;
   color: #d9d9d9;
-  margin: 36px 0;
+  margin: 2.25rem 0;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 1.5rem;
+  line-height: 1.8125rem;
+}
+@media (max-width: 1400px) {
+  .conteiner-login__logo {
+    width: 31.25rem;
+  }
+  .login__h1 {
+    margin-bottom: 2.4rem;
+    margin-top: 0.9rem;
+  }
+  .login__input {
+    margin: 1.2rem 0 2.4rem 0;
+  }
 }
