Style: Cambia fuente y tamaño de los parrafos
Se le asigna la fuente Futura Md BT y aumenta el tamaño a los p dentro de footer.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,12 @@
   font-style: normal;
   font-weight: 400;
 }
+@font-face {
+  font-family: "Futura Md BT";
+  src: url("assets/fonts/Futura_20Medium_20BT.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
 .mat-checkbox-inner-container {
   height: 24px !important;
   width: 24px !important;
