--- a/src/app/core/layouts/components/footer-auth/footer-auth.component.scss
+++ b/src/app/core/layouts/components/footer-auth/footer-auth.component.scss
@@ -4,19 +4,18 @@
   justify-content: center;
   align-items: center;
   padding: 1.44em 0;
+  font-style: normal;
   .address__p {
-    margin: auto 0;
-    padding: 0 10px;
     font-family: "Futura Md BT";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14px;
+    margin: auto 0;
+    padding: 0 1.25rem 0 0.3125rem;
+    font-size: 1.25rem;
+    line-height: 0.875rem;
   }
   .address__icon {
     font-weight: 700;
-    font-size: 14px;
-    width: 14px;
-    height: 14px;
+    font-size: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
