--- a/src/app/core/layouts/components/footer-auth/footer-auth.component.html
+++ b/src/app/core/layouts/components/footer-auth/footer-auth.component.html
@@ -1,18 +1,22 @@
 <address class="address">
-  <mat-icon
-    aria-hidden="false"
-    aria-label="Example home icon material-symbols-outlined"
-    class="address__icon"
-  >
-    call
-  </mat-icon>
-  <p class="address__p">(+54 11) 5370 8586</p>
-  <mat-icon
-    aria-hidden="false"
-    aria-label="Example home icon material-symbols-outlined"
-    class="address__icon"
-  >
-    mail
-  </mat-icon>
-  <p class="address__p">info@mensajerosdelapaz.org.ar</p>
+  <div class="address__conteiner">
+    <mat-icon
+      aria-hidden="false"
+      aria-label="Example home icon material-symbols-outlined"
+      class="address__icon"
+    >
+      call
+    </mat-icon>
+    <p class="address__p">(+54 11) 5370 8586</p>
+  </div>
+  <div class="address__conteiner">
+    <mat-icon
+      aria-hidden="false"
+      aria-label="Example home icon material-symbols-outlined"
+      class="address__icon"
+    >
+      mail
+    </mat-icon>
+    <p class="address__p">info@mensajerosdelapaz.org.ar</p>
+  </div>
 </address>
