--- a/src/app/core/layouts/components/footer-auth/footer-auth.component.scss
+++ b/src/app/core/layouts/components/footer-auth/footer-auth.component.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 0.44em 0;
+  padding: 1.5rem 0;
   font-style: normal;
   .address__conteiner {
     display: flex;
