Style: Cambiacolores hex por variables en variables.scss
De esta forma se podran modificar estas variables de una manera mas facil a futuro si es necesario

--- a/src/app/modules/auth/containers/login/login.component.html
+++ b/src/app/modules/auth/containers/login/login.component.html
@@ -9,7 +9,7 @@
       <form action="" class="login__form">
         <h2 class="login__h1">INICIAR SESIÓN</h2>
         <label class="login__label" for="user">USUARIO</label>
-        <input class="login__input" type="text" id="user" />
+        <input class="login__input" type="email" id="user" />
         <label class="login__label" for="password">CONTRASEÑA</label>
         <input class="login__input" type="password" id="password" />
         <mat-checkbox class="login__recordar-usuario" color="primary">
