--- a/src/app/modules/auth/containers/login/login.component.scss
+++ b/src/app/modules/auth/containers/login/login.component.scss
@@ -1,4 +1,4 @@
-// @import 'styles/variables.scss';
+@import "../../../../../styles/variables.scss";
 .conteiner-login {
   display: flex;
   justify-content: space-evenly;
@@ -38,11 +38,15 @@
   height: 3.75rem;
   font-weight: 400;
   font-size: 1.25rem;
-  background: #d9d9d9;
+  background: $color-bg-grey;
   border-radius: 3.75rem;
   border: none;
   padding: 0 1.875rem;
   margin: 1.5625rem 0 3rem 0;
+  outline-color: $color-primary-border;
+}
+.login__input:focus {
+  background-color: $color-bg-light-grey;
 }
 
 .login__recordar-usuario {
@@ -54,7 +58,7 @@
 .login__recuperar-contrasena {
   margin-top: 1.125rem;
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.494118);
+  color: $color-text-secondary;
   font-weight: 400;
   font-size: 1.125rem;
   line-height: 1.375rem;
@@ -63,7 +67,7 @@
   width: 9.0625rem;
   height: 3.75rem;
   border-radius: 3.75rem;
-  color: #d9d9d9;
+  color: $color-bg-grey;
   margin: 2.25rem 0;
   font-weight: 400;
   font-size: 1.5rem;
