--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,19 +1,4 @@
-$color-primary: #007ac1;
-$color-primary-border: #007ac196;
-$color-secondary: #82cff5;
-$color-secondary-dark: #4394c2;
-$color-secondary-border: #19618b9c;
-$color-secondary-btn: #19618b;
-
-$color-tertiary: #f5ec0a;
-$color-bg-teal: #92cdef;
-$color-bg-grey: #d9d9d9;
-
-$color-text-primary: #000000;
-$color-text-secondary: #0000007e;
-
-$tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
-
+@import "variables.scss";
 html,
 body {
   height: 100%;
