--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,5 +12,6 @@ $color-bg-light-grey: #e2e2e2;
 
 $color-text-primary: #000000;
 $color-text-secondary: #0000007e;
+$color-text-grey: #a3a3a3;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
