Feat: Crea header general
Este header es del usuario ong y el usuario centro.

--- a/src/app/core/layouts/components/header-general/header-general.component.html
+++ b/src/app/core/layouts/components/header-general/header-general.component.html
@@ -1,1 +1,7 @@
-p header-general
+<header class="header">
+  <img
+    src="../../../../../assets/images/logo-MDP.svg"
+    alt="Logo Mensajeros de la Paz"
+    class="header__logo"
+  />
+</header>
