--- a/src/app/core/layouts/components/header-general/header-general.component.scss
+++ b/src/app/core/layouts/components/header-general/header-general.component.scss
@@ -1,1 +1,13 @@
 // @import 'styles/variables.scss';
+.header {
+  width: 100%;
+  height: 8.5625em;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.13), 0px 3px 14px rgba(0, 0, 0, 0.01);
+  .header__logo {
+    height: 100%;
+    padding: 0.5625em 0;
+    margin-left: 2.25em;
+  }
+}
