Feat: Crea navbar lateral
Se estructura y estila esta barra de navegacion lateral

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,3 +15,5 @@ $color-text-secondary: #0000007e;
 $color-text-grey: #a3a3a3;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
+
+//$height-header: 8.5625em;
