--- a/src/app/core/layouts/components/header-general/header-general.component.scss
+++ b/src/app/core/layouts/components/header-general/header-general.component.scss
@@ -1,10 +1,16 @@
 // @import 'styles/variables.scss';
 .header {
+  font-size: 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 8.5625em;
   display: flex;
   align-items: center;
-  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.13), 0px 3px 14px rgba(0, 0, 0, 0.01);
+  box-shadow: 0 0.5em 0.625em rgba(0, 0, 0, 0.13),
+    0em 0.1875em 0.875em rgba(0, 0, 0, 0.01);
+  z-index: 100;
   .header__logo {
     height: 100%;
     padding: 0.5625em 0;
