--- a/src/app/core/layouts/containers/admin-layout/admin-layout.component.html
+++ b/src/app/core/layouts/containers/admin-layout/admin-layout.component.html
@@ -1,3 +1,3 @@
 <app-header-general></app-header-general>
+<app-navbar></app-navbar>
 <ng-content></ng-content>
-<app-footer-auth></app-footer-auth>
