--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,9 @@ $color-text-primary: #000000;
 $color-text-secondary: #0000007e;
 $color-text-grey: #a3a3a3;
 
+$color-bg-white: #ffffff;
+
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
 //$height-header: 8.5625em;
+//$widht-navbar: 28.75em;
