--- a/src/app/core/layouts/containers/admin-layout/admin-layout.component.scss
+++ b/src/app/core/layouts/containers/admin-layout/admin-layout.component.scss
@@ -1,1 +1,8 @@
 @import "../../../../../styles/variables.scss";
+.content {
+  position: relative;
+  top: 8.5625em;
+  float: right;
+  min-height: calc(100vh - 8.5625em);
+  width: calc(100% - 28.75em);
+}
