--- a/src/app/modules/admin/components/home/home.component.scss
+++ b/src/app/modules/admin/components/home/home.component.scss
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-
+  min-height: calc(100vh - 8.5625em);
   .home__title {
     font-size: 96px;
     line-height: 115px;
