--- a/src/app/modules/admin/containers/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/containers/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<app-admin-layout>
-  <router-outlet></router-outlet>
+<app-admin-layout class="dashboard">
+  <app-home></app-home>
 </app-admin-layout>
