--- a/src/app/modules/admin/containers/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/containers/dashboard/dashboard.component.scss
@@ -1,1 +1,9 @@
 @import "../../../../../styles/variables.scss";
+
+.dashboard {
+  position: relative;
+  top: 8.5625em;
+  float: right;
+  min-height: calc(100vh - 8.5625em);
+  width: calc(100% - 28.75em);
+}
