Style: Cambia el estilo del contenedor del router-outlet de admin-layout
esto se hace para que el contenido de los containers que aqui se muestren encajen con el layout y el tamaño de la pantalla

--- a/src/app/core/layouts/containers/admin-layout/admin-layout.component.html
+++ b/src/app/core/layouts/containers/admin-layout/admin-layout.component.html
@@ -1,3 +1,5 @@
 <app-header-general></app-header-general>
 <app-navbar></app-navbar>
-<ng-content class="content"></ng-content>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
