--- a/src/app/core/layouts/components/navbar/navbar.component.html
+++ b/src/app/core/layouts/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <section class="navbar">
-  <a class="navbar__home" href="">
+  <a class="navbar__home" routerLink="dashboard/home">
     <img
       class="navbar__ico-home"
       src="../../../../../assets/icons/House.svg"
@@ -9,17 +9,17 @@
   </a>
   <ul class="navbar__list">
     <li class="navbar__item">
-      <a href="" class="navbar__link">
+      <a routerLink="dashboard/usuarios" class="navbar__link">
         <img
           class="navbar__ico-list"
           src="../../../../../assets/icons/person_check_icon.svg"
-          alt="Icono de home"
+          alt="Icono de usuarios"
         />
         <h2 class="navbar__text-list">Usuarios</h2>
       </a>
     </li>
     <li class="navbar__item">
-      <a href="" class="navbar__link">
+      <a routerLink="dashboard/centros" class="navbar__link">
         <img
           class="navbar__ico-list"
           src="../../../../../assets/icons/Building.svg"
@@ -29,7 +29,7 @@
       </a>
     </li>
     <li class="navbar__item">
-      <a href="" class="navbar__link">
+      <a routerLink="dashboard/ejes" class="navbar__link">
         <img
           class="navbar__ico-list"
           src="../../../../../assets/icons/List ol.svg"
@@ -39,7 +39,7 @@
       </a>
     </li>
     <li class="navbar__item">
-      <a href="" class="navbar__link">
+      <a routerLink="dashboard/reportes" class="navbar__link">
         <img
           class="navbar__ico-list"
           src="../../../../../assets/icons/Layout text window reverse.svg"
@@ -49,7 +49,7 @@
       </a>
     </li>
     <li class="navbar__item">
-      <a href="" class="navbar__link">
+      <a routerLink="dashboard/ayuda" class="navbar__link">
         <img
           class="navbar__ico-list"
           src="../../../../../assets/icons/Question circle.svg"
@@ -59,7 +59,7 @@
       </a>
     </li>
     <li class="navbar__item">
-      <a href="" class="navbar__link">
+      <a routerLink="../" class="navbar__link">
         <img
           class="navbar__ico-list"
           src="../../../../../assets/icons/Box arrow left.svg"
