--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "Futura Bk BT";
-  src: url("assets/fonts/FuturaBookBT.ttf") format("truetype");
+  src: url("assets/fonts/FutuBk.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
