--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,17 +6,20 @@ $color-secondary-border: #19618b9c;
 $color-secondary-btn: #19618b;
 
 $color-tertiary: #f5ec0a;
-$color-bg-teal: #92cdef;
+$color-bg-primary: #92cdef;
 $color-bg-grey: #d9d9d9;
 $color-bg-light-grey: #e2e2e2;
+$color-bg-hover-primary: #19618b;
 
 $color-text-primary: #000000;
 $color-text-secondary: #0000007e;
 $color-text-grey: #a3a3a3;
+$color-text-hover-primary: #ffffff;
 
 $color-bg-white: #ffffff;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
+$transition: 0.3s;
 //$height-header: 8.5625em;
 //$widht-navbar: 28.75em;
