--- a/src/app/modules/auth/containers/recover-password/recover-password.component.html
+++ b/src/app/modules/auth/containers/recover-password/recover-password.component.html
@@ -1,45 +1,19 @@
 <div class="container">
-    <div id="img" class="conteiner-img">
-        <img src="../../../../../assets/images/logo-MDP.svg" alt="" width="672px" height="296px">
+    <div class="container-logo">
+        <img src="/assets/images/logo-MDP.svg" width="672px" height="296px" alt="Logo Mensajeros de la Paz">
     </div>
-
-    <div class="form" *ngIf="!flag">
+    <div class="container-inputs">
         <div>
-            <h1 class="title">OLVIDE MI CONTRASEÑA</h1>
-
-            <h3 class="subtitle">Ingresa tu email para <br> restaurar la contraseña</h3>
+            <h2>Nueva contraseña</h2>
+            <input type="password">
         </div>
-
-        <div class="email">
-            <form class="form">
-                <p>Email</p>
-                <input type="email" class="login__input" matInput [formControl]="emailFormControl"
-                    [errorStateMatcher]="matcher" placeholder="Ex. pat@example.com">
-                <div style="margin-top: 5px;">
-                    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                    Please enter a valid email address
-                </mat-error>
-                <mat-error *ngIf="emailFormControl.hasError('required')">
-                    Email is <strong>required</strong>
-                </mat-error>
-                </div>
-                
-
-            </form>
-
-            <button type="submit" [disabled]="!emailFormControl.valid" (click)="submit()">Enviar</button>
+        <div class="continer-repite">
+            <h2>Repite la contraseña</h2>
+            <input type="password">
         </div>
+        <button (click)="confirm()">Confirmar</button>
     </div>
-    <ng-container *ngIf="flag">
-
-        <div class="container-post">
-            <div class="post">
-                <h1>Te hemos enviado un correo a <br> <em style="color: blue;">{{emailFormControl.value}}</em> <br> para
-                    restaurar tu contraseña. <br> Por favor revisa tu
-                    email.</h1>
-            </div>
-        </div>
 
 
-    </ng-container>
+
 </div>
