--- a/src/app/modules/auth/containers/recover-password/recover-password.component.scss
+++ b/src/app/modules/auth/containers/recover-password/recover-password.component.scss
@@ -5,52 +5,28 @@
     align-items: center;
     justify-content: center;
     margin-left: 108px;
+    //margin-top: 50px;
 }
 
-.conteiner-img {
-    margin-top: 167px;
+.container-logo{
+    margin-top: 60px;
 }
 
-.form {
+.container-inputs{
     margin-top: 139px;
     margin-left: 113px;
 }
 
-.title {
-    font-size: 60px;
-    font-weight: 400;
-    line-height: 72px;
-    letter-spacing: 0em;
-    text-align: center;
-    font-family: Futura Bk BT;
+.continer-repite{
+    margin-top: 90px;
 }
 
-.subtitle {
-    margin-bottom: 132px;
-    margin-top: 147px;
-    margin-right: 54px;
-    font-family: Futura Bk BT;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 48px;
-    letter-spacing: 0em;
-    text-align: center;
-
+h2{
+    margin-left: 70px;
+    border-radius: nullpx;
 }
 
-
-p {
-    font-family: Futura Bk BT;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 29px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-left: 200px;
-}
-
-
-.login__input {
+input{
     font-weight: 400;
     font-size: 1.25rem;
     background: $color-secondary;
@@ -62,55 +38,24 @@ p {
     height: 60px;
     width: 458px;
     border-radius: 50px;
-    
-
-
-    ::-webkit-input-placeholder {
-        color: $color-text-grey;
-    }
-
-    ::-moz-placeholder {
-        color: $color-text-grey;
-    }
-
-    :-ms-input-placeholder {
-        color: $color-text-grey;
-    }
-
-    ::-ms-input-placeholder {
-        color: $color-text-grey;
-    }
-
-    ::placeholder {
-        color: $color-text-grey;
-    }
 }
 
-.login__input:focus {
-    background-color: $color-bg-light-grey;
-}
 
-button {
+button{
     height: 60px;
-    width: 145px;
-    margin-left: 466px;
-    top: 814px;
+    width: 219px;
     border-radius: 60px;
     background-color: $color-secondary;
     cursor: pointer;
-}
-
-.container-post {
-    margin-top: 159px;
-    margin-left: 153px;
-}
-
-.post {
-    font-family: Futura Bk BT;
-    font-size: 40px;
+    margin-left: 320px;
+    margin-top: 100px;
+    font-size: 30px;
     font-weight: 400;
-    line-height: 48px;
+    line-height: 36px;
     letter-spacing: 0em;
-    text-align: left;
-    margin-top: 110px;
 }
+
+button:hover{
+    color: white;
+}
+
