--- a/src/app/core/layouts/components/header-general/header-general.component.scss
+++ b/src/app/core/layouts/components/header-general/header-general.component.scss
@@ -1,20 +1,41 @@
 @import "../../../../../styles/variables.scss";
 .header {
-  font-size: 16px;
+  font-size: 1em;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 8.5625em;
+  height: 8.75em;
   display: flex;
+  justify-content: center;
   align-items: center;
   background-color: $color-bg-white;
-  box-shadow: 0 0.5em 0.625em rgba(0, 0, 0, 0.13),
-    0em 0.1875em 0.875em rgba(0, 0, 0, 0.01);
   z-index: 1000;
+  border: 0.1875em solid $color-bg-light-grey;
+  // filter: drop-shadow(0em 0.25em 0.25em rgba(0, 0, 0, 0.25));
   .header__logo {
-    height: 100%;
+    width: 16.25em;
     padding: 0.5625em 0;
     margin-left: 2.25em;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -0.9375em;
+    width: 100%;
+    height: 0.5625em;
+    background: #1967d2;
+    box-shadow: 0em 0.375em 0.5em rgba(0, 0, 0, 0.14),
+      0em 0.0625em 0.75em rgba(0, 0, 0, 0.12),
+      0em 0.1875em 0.1875em rgba(0, 0, 0, 0.2);
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -1.875em;
+    width: 100%;
+    height: 0.5625em;
+    background: #344d64;
+    box-shadow: 0em 0.25em 0.25em rgba(0, 0, 0, 0.25);
   }
 }
