--- a/src/app/modules/admin/containers/home/home.component.html
+++ b/src/app/modules/admin/containers/home/home.component.html
@@ -6,3 +6,19 @@
     class="home__img"
   />
 </section>
+<section class="home">
+  <h1 class="home__title">Sistema de Reportes Digitales</h1>
+  <img
+    src="../../../../../assets/images/logo-20a.svg"
+    alt="Logo de 20 años de Mensajeros de la Paz"
+    class="home__img"
+  />
+</section>
+<section class="home">
+  <h1 class="home__title">Sistema de Reportes Digitales</h1>
+  <img
+    src="../../../../../assets/images/logo-20a.svg"
+    alt="Logo de 20 años de Mensajeros de la Paz"
+    class="home__img"
+  />
+</section>
