--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,9 +14,12 @@ $color-bg-hover-primary: #19618b;
 $color-text-primary: #000000;
 $color-text-secondary: #0000007e;
 $color-text-grey: #a3a3a3;
+$color-text-grey-dark: #79747e;
 $color-text-hover-primary: #ffffff;
 
-$color-bg-white: #ffffff;
+$color-white: #ffffff;
+$color-bg-line-up-header: #1967d2;
+$color-bg-line-down-header: #344d64;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
