--- a/src/app/core/layouts/components/header-general/header-general.component.html
+++ b/src/app/core/layouts/components/header-general/header-general.component.html
@@ -1,7 +1,21 @@
-<header class="header">
-  <img
-    src="../../../../../assets/images/logo-MDP.svg"
-    alt="Logo Mensajeros de la Paz"
-    class="header__logo"
-  />
-</header>
+<section class="header-container">
+  <header class="header">
+    <img
+      src="../../../../../assets/images/logo-MDP.svg"
+      alt="Logo Mensajeros de la Paz"
+      class="header__logo"
+    />
+    <div class="header__usuario-container">
+      <img
+        class="header__usuario-ico"
+        src="../../../../../assets/icons/account_circle_filled.svg"
+        alt="Icono de usuario logeado"
+      />
+      <p class="header__usuario-name">Administrador</p>
+    </div>
+  </header>
+  <div class="lines-container">
+    <div class="lines-container__line1"></div>
+    <div class="lines-container__line2"></div>
+  </div>
+</section>
