Style: Hace responsive el header en viewport 1400 y 768
para una mejor visualizacion en estos viewport.

--- a/src/app/core/layouts/components/header-general/header-general.component.html
+++ b/src/app/core/layouts/components/header-general/header-general.component.html
@@ -1,7 +1,7 @@
 <section class="header-container">
   <header class="header">
     <img
-      src="../../../../../assets/images/logo-MDP.svg"
+      src="../../../../../assets/images/logo-MDP.png"
       alt="Logo Mensajeros de la Paz"
       class="header__logo"
     />
