--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -1,12 +1,10 @@
 @import "../../../../../styles/variables.scss";
 .navbar {
-  font-size: 1em;
+  font-size: 16px;
   width: 13.3125em;
-  min-height: calc(100vh - 8.5625em);
-  margin-top: 69px;
   position: fixed;
   z-index: 1000;
-  top: 11.75em;
+  top: 135px;
   left: 0;
   .navbar__list {
     .navbar__item {
