Style: hace responsive el admin-layout para vw1400 y vw768
 esto se realiza para que se vea bien en especial en desktop vw 1400

--- a/src/app/core/layouts/containers/admin-layout/admin-layout.component.scss
+++ b/src/app/core/layouts/containers/admin-layout/admin-layout.component.scss
@@ -1,8 +1,8 @@
 @import "../../../../../styles/variables.scss";
 .content {
   position: relative;
-  top: 8.5625em;
+  top: 8.25em; //altura del header/ 132px/
   float: right;
   min-height: calc(100vh - 8.5625em);
-  width: calc(100% - 28.75em);
+  width: 100%;
 }
