--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
   width: 13.3125em;
   position: fixed;
   z-index: 1000;
-  top: 135px;
+  top: 12.625em;
   left: 0;
   .navbar__list {
     .navbar__item {
@@ -46,5 +46,15 @@
         }
       }
     }
+  }
+}
+@media (max-width: 1400px) {
+  .navbar {
+    top: 9.875em;
+  }
+}
+@media (max-width: 768px) {
+  .navbar {
+    top: 7.8125em;
   }
 }
