Style: agrego clase error
la cual evita que el logo se mueva al interactuar con el input

--- a/src/app/modules/auth/containers/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/containers/forgot-password/forgot-password.component.html
@@ -7,12 +7,12 @@
             <h1 class="title">OLVIDE MI CONTRASEÑA</h1>
             <h3 class="subtitle">Ingresa tu email para <br> restaurar la contraseña</h3>
         </div>
-        <div class="email">
+        <div class="">
             <form class="form">
                 <p>Email</p>
                 <input type="email" class="input" matInput [formControl]="emailFormControl"
                     [errorStateMatcher]="matcher" placeholder="Ej. pat@example.com">
-                <div style="margin-top: 5px;">
+                <div class="error">
                     <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
                         Please enter a valid email address
                     </mat-error>
