--- a/src/app/modules/auth/containers/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/auth/containers/forgot-password/forgot-password.component.scss
@@ -4,16 +4,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 108px;
 }
 
 .conteiner-img {
-    margin-top: 167px;
+    margin-top: 117px;
 }
 
 .form {
     margin-top: 139px;
-    margin-left: 113px;
+    margin-left: 103px;
 }
 
 .title {
@@ -56,7 +55,7 @@ p {
     background: $color-secondary;
     border: none;
     padding: 0 1.875rem;
-    margin: 1.5625rem 0 1rem 0;
+    margin: 1.4rem 0 1rem 0;
     outline-color: $color-primary-border;
     text-align: center;
     height: 60px;
@@ -88,6 +87,11 @@ p {
 
 .input:focus {
     background-color: $color-bg-light-grey;
+}
+
+.error{
+    margin-top: 5px; 
+    height: 10px;
 }
 
 button {
