--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../../styles/variables.scss";
 .navbar {
   font-size: 16px;
-  width: 13.3125em;
+  width: 15.3125em;
   position: fixed;
   z-index: 1000;
   top: 12.625em;
@@ -11,7 +11,6 @@
       margin: 0.625em 0;
       &:hover {
         .navbar__link {
-          color: $color-text-hover-primary;
           background: $color-bg-hover-primary;
           .navbar__ico-list {
             path {
@@ -21,11 +20,11 @@
         }
       }
       .navbar__link {
-        height: 2.8125em;
+        height: 3.3125em;
         display: flex;
         align-items: center;
         text-decoration: none;
-        color: $color-text-primary;
+        color: $color-white;
         background: $color-bg-primary;
         box-shadow: 0em 0.5em 0.625em rgba(0, 0, 0, 0.14),
           0em 0.1875em 0.875em rgba(63, 46, 46, 0.12),
@@ -36,18 +35,27 @@
         .navbar__ico-list {
           width: 1.1875em;
           margin-left: 2.0625em;
-          margin-right: 0.8125em;
+          margin-right: 0.9375em;
           path {
-            fill: $color-text-primary;
+            fill: $color-white;
           }
         }
         .navbar__text-list {
-          font-size: 1em;
+          font-size: 1.375em;
+        }
+      }
+      .activeRoute {
+        background: $color-bg-hover-primary;
+        .navbar__ico-list {
+          path {
+            fill: $color-text-hover-primary;
+          }
         }
       }
     }
   }
 }
+
 @media (max-width: 1400px) {
   .navbar {
     top: 9.875em;
