--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,11 +6,11 @@ $color-secondary-border: #19618b9c;
 $color-secondary-btn: #19618b;
 $color-tertiary: #f5ec0a;
 
-$color-bg-primary: #92cdef; //nav bg link
+$color-bg-primary: #083d5e; //nav bg link
 $color-bg-grey: #d9d9d9;
 $color-bg-light-grey: #e2e2e2;
 
-$color-bg-hover-primary: #19618b; //nav hover en link bg
+$color-bg-hover-primary: #1967d2; //nav hover en link bg
 
 $color-text-primary: #000000; //nav text link
 $color-text-secondary: #0000007e;
@@ -26,7 +26,7 @@ $color-line-down-header: #344d64;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
-$transition: 0.3s all linear;
+$transition: 0.2s all linear;
 
 //para viewport
 //.....font-size: 16px/12px/10px
